Relink minified files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Link Media Query -->
         <link rel="stylesheet" href="./css/media.css">
         <!-- Link CSS -->
-        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/index.min.css">
     </head>
     <body>
         <!-- Navbar -->
@@ -350,7 +350,7 @@
             </div>
         </main>
         <!-- Link JS -->
-        <script src="./js/index.js"></script>
+        <script src="./js/index.min.js"></script>
         <!-- Link Bootstrap JS -->
         <script src="./js/bootstrap.bundle.min.js"></script>
         <!-- Link sweetalert library -->
