Change Avatar Image

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="nav-image">
                         <img
-                            src="./Images/avatar-4.jpg"
+                            src="./Images/me.jpg"
                             alt="avatar"
                             class="rounded-3"
                             width="40"
@@ -229,8 +229,9 @@
             </div>
         </nav>
         <!-- Header -->
-        <header class="pt-5">
-            <!-- I will Make form for sign up and login --></header>
+        <header>
+            <!-- I will Make form for sign up and login -->
+        </header>
         <main class="my-bg-gray-100 pt-5 pb-5">
             <div class="container">
                 <section class="generate-qr pt-5">
